changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/readable.c: Passing the same buffer as both the output buffer as a
  parameter in the format to s(n)printf invokes undefined behaviour. Avoid doing
  that. Tests showed that glibc treated the buffer as empty, resulting in
  ignoring whatever was in the buffer before.
Arvid Norlander 2009-02-06

common/item.c: Make item_types_size static, it isn't used elsewhere.
Arvid Norlander 2009-02-06

server/attack.c: Fix rare abort() with spells like dragonfire on multi-tile
  objects. Required some single tile object to be on top of the multi-tile
  object.
Arvid Norlander 2009-02-04

server/spell_attack.c: Fix bug #2353025 "2.0, holy wrath and ret. strike freeze
  server". This happened because explosion spells use stats.maxhp as a unique ID
  to avoid running out of control. This one was properly set by bullet spells,
  but not by smite spells. Fix this.
Arvid Norlander 2009-02-04

server/spell_util.c: Put cap on level used for cast_magic_storm() in
    prayer_failure() - otherwise, spell can hang the server as it
    gets cast at super high level.
MSW 2009-02-04

common/button.c: Fix bug #2457751 "Unpaid items work for some things...". Now
  dropping unpaid items on altars no longer works.
Arvid Norlander 2009-02-03

Fix out-of-bounds accessess to xxx_bonus[] (and similar) arrays.
Andreas Kirschbaum

common/living.c:
random_maps/wall.c, random_maps/style.c, random_maps/door.c, random_maps/exit.c,
  random_maps/random_map.c, random_maps/rogue_layout.c, random_maps/test.c,
  random_maps/special.c, random_maps/floor.c, random_maps/monster.c,